buildscript {
	ext {
		// springBootVersion = '1.5.3.RELEASE'
		springBootVersion = '1.4.0.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

// bootRun {
//     jvmArgs "-XX:MaxPermSize=256m"
// }



apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'io.spring.dependency-management'
// apply plugin: 'application'
apply plugin: 'spring-boot'

jar {
	baseName = 'gateway'
	version = '0.0.1-SNAPSHOT'
}

version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	mavenCentral()
}

// configurations {
// 	providedRuntime
// }

// ext {
// 	springCloudVersion = 'Dalston.RELEASE'
// }

dependencies {
	compile('org.springframework.cloud:spring-cloud-starter-zuul')
	compile('org.springframework.boot:spring-boot-starter-web')
	// providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
	testCompile('org.springframework.boot:spring-boot-starter-test')
	compile('org.springframework.cloud:spring-cloud-starter-eureka')
	compile('org.springframework.boot:spring-boot-starter-actuator')
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR5"
	}
}

task wrapper(type: Wrapper) {
	gradleVersion = '2.9'
}

// buildscript {
// 	ext {
// 		springBootVersion = '1.4.0.RELEASE'
// 	}
// 	repositories {
// 		mavenCentral()
// 	}
// 	dependencies {
// 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
// 	}
// }

// apply plugin: 'java'
// apply plugin: 'eclipse'
// apply plugin: 'idea'
// apply plugin: 'spring-boot'
// apply plugin: 'io.spring.dependency-management'

// jar {
// 	baseName = 'gateway'
// 	version = '0.0.1-SNAPSHOT'
// }
// sourceCompatibility = 1.8
// targetCompatibility = 1.8

// repositories {
// 	mavenCentral()
// }


// dependencies {
// 	compile('org.springframework.cloud:spring-cloud-starter-zuul')
// 	compile('org.springframework.boot:spring-boot-starter-web')
// 	testCompile('org.springframework.boot:spring-boot-starter-test')
// }

// dependencyManagement {
// 	imports {
// 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR5"
// 	}
// }


// eclipse {
// 	classpath {
// 		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
// 		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
// 	}
// }

// task wrapper(type: Wrapper) {
// 	gradleVersion = '2.9'
// }